--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="container">
     <div class="row">
       <div class="col col-sm-9">
-        <h1 class="animate__animated animate__bounce">1 of 2</h1>
+        <h1 class="animate__animated animate__bounce">Hello World!</h1>
       </div>
     </div>
   </div>
